# ros2_color_detector_package

./: README.md
install/: local_setup.sh  setup.sh
install/cpp_launch/share/ament_index/resource_index/package_run_dependencies/: cpp_launch
install/cpp_launch/share/cpp_launch/: package.sh
install/cpp_launcher/share/cpp_launcher/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cpp_launcher/share/cpp_launcher/launch/: launch.py
install/green/lib/green/: color_filter
install/green/share/green/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/green/share/green/cmake/: greenConfig.cmake
install/orange/lib/orange/: webcam_driver
install/orange/share/orange/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/cpp_launch/: CMakeLists.txt
src/cpp_launch/launch/: launch.py
src/green/: CMakeLists.txt
src/green/src/: color_filter.cpp
src/orange/: package.xml  setup.cfg  setup.py
src/orange/orange/: webcam_driver.py
